--- a/Curso_2/02_Estructuras_de_datos.ipynb
+++ b/Curso_2/02_Estructuras_de_datos.ipynb
@@ -123,7 +123,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "_nYyKe_bjHY5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
           "height": 35
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +195,7 @@
           "height": 35
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "MNGFUaC6hyfi",
         "outputId": "9335e47e-8c99-48f4-da36-81e9d4bfab95",
@@ -332,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +355,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,7 +390,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,7 +497,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -522,7 +522,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +588,7 @@
       "metadata": {
         "id": "mwAwQ9_EmQW1"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -604,7 +604,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +628,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +720,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +744,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,7 +782,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -807,7 +807,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,7 +866,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,7 +904,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -927,7 +927,7 @@
       "metadata": {
         "id": "owEBPKO9AKm5"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +943,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -969,7 +969,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -995,7 +995,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1033,7 +1033,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,27 +1073,106 @@
         "# Crear una lista con las primeras letras en mayúsculas de una lista de nombres\n",
         "\n",
         "nombres = [\"juan\", \"pedro\", \"ana\", \"maria\"]\n",
-        "nombres_mayuscula = [nombre.capitalize() for nombre in nombres]\n",
+        "nombres_mayuscula = [nombre.capitalize() for nombre in nombres] #se puede usar x o una variable clara que se especifique pero siempre\n",
+        "                                                                # manteniendo el orden de X tal que X\n",
         "print(nombres_mayuscula)\n"
       ],
       "metadata": {
-        "id": "V3ZGMDOKkY29"
+        "id": "V3ZGMDOKkY29",
+        "outputId": "5659d993-a7f1-44ce-ace5-ffd389c15bc3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Juan', 'Pedro', 'Ana', 'Maria']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
+        "%%time\n",
+        "\n",
         "my_list = []\n",
-        "for x in range(1,1_000_0001): #usando for loops para hacer una tarea\n",
+        "for x in range(1,100_000_001): #usando for loops para hacer una tarea\n",
         "  my_list.append(x**2) #los numeors que se vayan generando seran elebados al cuadrado y guardados en el lista"
       ],
       "metadata": {
-        "id": "hRPb7fmXFQPE"
+        "id": "hRPb7fmXFQPE",
+        "outputId": "e4aef9c7-17ee-4866-b497-e553378ee590",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 42.2 s, sys: 3.74 s, total: 45.9 s\n",
+            "Wall time: 46.3 s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "my_list = [x**2 for x in range(1,100_000_001)] #usando list compression para hacer una tarea, es la misma opcion pero otra manera con list compression\n",
+        "\n",
+        "#aprox se gana 10 segundo en este tipo de calculo, mientras mas grande, mas tiempo se ira gananado"
+      ],
+      "metadata": {
+        "id": "l9tyNZC2G69_",
+        "outputId": "ab0c9582-fae1-4059-897e-c430980d7aed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 34.1 s, sys: 3.6 s, total: 37.7 s\n",
+            "Wall time: 38.1 s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "red = round(38.1/46.3*100,2)\n",
+        "print(f'Aprox el list compression logra hacer la misma tarea usando el {red}% de lo que se haria con un for')"
+      ],
+      "metadata": {
+        "id": "Gx4gisAwHYMN",
+        "outputId": "2e2d6677-565d-454a-ac3e-33569660135a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aprox el list compression logra hacer la misma tarea usando el 82.29% de lo que se haria con un for\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1110,12 +1189,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "impar = [x for x in range(1,50) if x%2 != 0]\n",
+        "print(impar)"
+      ],
       "metadata": {
-        "id": "jfyhX8FmksPF"
+        "id": "jfyhX8FmksPF",
+        "outputId": "e7126d93-f108-4ec0-d4bd-4e4a51290fb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
