--- a/Clase_3/03_Estructuras_de_datos_parte2.ipynb
+++ b/Clase_3/03_Estructuras_de_datos_parte2.ipynb
@@ -75,6 +75,35 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "my_dict = {'47470368':'John Caballero',\n",
+        "           '45450912' : 'Piero Diaz',\n",
+        "           '42420522' : 'Julio Salgado'} #data hasheado o encriptado (datos sensibles), se pueden generar datos de forma aleatorio, asignando\n",
+        "my_dict"
+      ],
+      "metadata": {
+        "id": "jnBjuJuKMjny",
+        "outputId": "c0668d21-d6ba-49b5-d142-11eeca7dea67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'47470368': 'John Caballero'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Ejemplo 1.1: Creación de Diccionarios y Acceso a Elementos\n"
@@ -87,11 +116,58 @@
       "cell_type": "code",
       "source": [
         "# Crear un diccionario\n",
-        "persona = {'nombre': 'Ana', 'edad': 30, 'ciudad': 'Lima'}\n",
-        "print(persona)"
+        "persona1 = {'nombre': 'Ana', 'edad': 30, 'ciudad': 'Lima'}\n",
+        "print(persona1)"
       ],
       "metadata": {
-        "id": "P-TTXZxuuRe7"
+        "id": "P-TTXZxuuRe7",
+        "outputId": "9ea176ba-b284-4af2-9aed-5f68fad019b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nombre': 'Ana', 'edad': 30, 'ciudad': 'Lima'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Acceder a un valor\n",
+        "print(\"Nombre:\", persona1['nombre'])\n",
+        "print(\"Ciudad:\", persona1.get('ciudad'))\n"
+      ],
+      "metadata": {
+        "id": "tPRrAukRuS1S",
+        "outputId": "2fc48a8d-c227-4259-99af-fd36acc3ce7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre: Ana\n",
+            "Ciudad: Lima\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hCdp49zcOzS5"
       },
       "execution_count": null,
       "outputs": []
@@ -99,15 +175,50 @@
     {
       "cell_type": "code",
       "source": [
-        "# Acceder a un valor\n",
-        "print(\"Nombre:\", persona['nombre'])\n",
-        "print(\"Ciudad:\", persona.get('ciudad'))\n"
+        "persona1['genero'] = 'female' #asi se agrega un nuevo elemento al diccionario\n",
+        "print(persona1)"
       ],
       "metadata": {
-        "id": "tPRrAukRuS1S"
+        "id": "Rd1rlSeUOnmb",
+        "outputId": "a96f5c09-b761-4b06-ff35-6b010f15d944",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nombre': 'Ana', 'edad': 30, 'ciudad': 'Lima', 'genero': 'female'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del persona1['genero'] #asi se elimina del diciconario, solo necesita el key\n",
+        "print(persona1)"
+      ],
+      "metadata": {
+        "id": "s7DAJhjUPEu-",
+        "outputId": "89c2a529-f94a-400b-8ddc-a29695e1e8ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nombre': 'Ana', 'edad': 30, 'ciudad': 'Lima'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -145,6 +256,141 @@
       "metadata": {
         "id": "FiQWLZxXuY6G"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(persona1.keys()) #obtener las claves del diccionario"
+      ],
+      "metadata": {
+        "id": "A9bhYjbWP32t",
+        "outputId": "217920a6-bd38-4fc2-a28c-5367d3373792",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['nombre', 'edad', 'ciudad']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(persona1.values())"
+      ],
+      "metadata": {
+        "id": "3VYBFFDrP79_",
+        "outputId": "10a4cbf6-b740-4208-9edc-3f85fbd3c339",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Ana', 30, 'Lima']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(persona1)"
+      ],
+      "metadata": {
+        "id": "nMt87A-mP_kP",
+        "outputId": "5fb3da78-ba39-4c8c-df91-98462b6a8e1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['nombre', 'edad', 'ciudad']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = []\n",
+        "for item in persona1.items():\n",
+        "  my_list += list(item)\n",
+        "\n",
+        "my_list"
+      ],
+      "metadata": {
+        "id": "ZyAIZ-R2Q9M2",
+        "outputId": "cc712225-a2ae-47df-bcd0-0bd9629ab7c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['nombre', 'Ana', 'edad', 30, 'ciudad', 'Lima']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = []\n",
+        "[[my_list.append(x),my_list.append(y)] for (x,y) in persona1.items()]"
+      ],
+      "metadata": {
+        "id": "kNQBOzl2SWCd",
+        "outputId": "4748771f-865f-4e2e-a4e5-dfdaf8c2f214",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[None, None], [None, None], [None, None]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -201,9 +447,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "auto = {'Marca':'Toyota', 'Modelo':'Corolla', 'Año':2022, 'Color' : 'Blanco'}\n",
+        "print(auto)\n",
+        "\n",
+        "print(\"Marca: \", auto['Marca'])\n",
+        "print(\"Modelo: \", auto['Modelo'])\n",
+        "print(\"Año: \", auto['Año'])\n",
+        "print(\"Color: \", auto['Color'])\n",
+        "\n",
+        "auto['Precio'] = 20_000\n",
+        "print(auto)\n",
+        "\n",
+        "del auto['Color']\n",
+        "print(auto)\n",
+        "\n",
+        "print('Keys:', list(auto.keys()))\n",
+        "print('Valores:', list(auto.values()))\n"
+      ],
       "metadata": {
-        "id": "x2uN2fYnume5"
+        "id": "x2uN2fYnume5",
+        "outputId": "f3d006d0-5861-4132-c754-1b258ff24c61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Marca': 'Toyota', 'Modelo': 'Corolla', 'Año': 2022, 'Color': 'Blanco'}\n",
+            "Marca:  Toyota\n",
+            "Modelo:  Corolla\n",
+            "Año:  2022\n",
+            "Color:  Blanco\n",
+            "{'Marca': 'Toyota', 'Modelo': 'Corolla', 'Año': 2022, 'Color': 'Blanco', 'Precio': 20000}\n",
+            "{'Marca': 'Toyota', 'Modelo': 'Corolla', 'Año': 2022, 'Precio': 20000}\n",
+            "Keys: ['Marca', 'Modelo', 'Año', 'Precio']\n",
+            "Valores: ['Toyota', 'Corolla', 2022, 20000]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grades = {'Eder':18\n",
+        "          'Roger':19\n",
+        "          }"
+      ],
+      "metadata": {
+        "id": "YUG1tPprXVkx"
       },
       "execution_count": null,
       "outputs": []
@@ -231,15 +527,79 @@
     {
       "cell_type": "code",
       "source": [
+        "#El set no permite trabajar con duplicados\n",
+        "my_list = ['var1', 'var2', 'var3', 'var4','var1','var2','var1']\n",
+        "set(my_list)"
+      ],
+      "metadata": {
+        "id": "wwQXC7pcXwjn",
+        "outputId": "a1713f72-0ccf-4eb3-f16a-a6f7b31e1c65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'var1', 'var2', 'var3', 'var4'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_set = {1,2,3,4,5}\n",
+        "print(my_set)"
+      ],
+      "metadata": {
+        "id": "DrqSx1LyYuCh",
+        "outputId": "0a10ad20-ca07-4e1c-ac7a-7b408536d7c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Crear un set\n",
         "numeros = {1, 2, 3, 4, 5}\n",
         "print(numeros)\n"
       ],
       "metadata": {
-        "id": "D2ClA0CAutom"
+        "id": "D2ClA0CAutom",
+        "outputId": "d312972f-70a5-4328-9ebf-0733903f59a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -249,10 +609,22 @@
         "print(numeros)\n"
       ],
       "metadata": {
-        "id": "deMM35okuyPM"
+        "id": "deMM35okuyPM",
+        "outputId": "ef0d7def-2ee5-43d2-cf64-4316e0049f42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5, 6}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -262,10 +634,22 @@
         "print(numeros)\n"
       ],
       "metadata": {
-        "id": "VQjmgrWyuzAr"
+        "id": "VQjmgrWyuzAr",
+        "outputId": "507246bc-1969-4e80-f7c5-a3df36ed488f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 4, 5, 6}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -285,7 +669,7 @@
       "metadata": {
         "id": "169QsOxuvAbe"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
