--- a/Clase_3/03_Estructuras_de_datos_parte2.ipynb
+++ b/Clase_3/03_Estructuras_de_datos_parte2.ipynb
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -126,7 +126,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +269,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +295,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +351,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +378,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,6 +503,41 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alien_0 = {'x_position':0 , 'y_position': 25, 'speed':'medium'}\n",
+        "print(\"Original position: \" + str(alien_0['x_position']))\n",
+        "\n",
+        "if alien_0['speed'] == 'slow':\n",
+        "  x_increment = 1\n",
+        "elif alien_0['speed'] == 'medium':\n",
+        "  x_increment = 2\n",
+        "else:\n",
+        "  x_increment = 3\n",
+        "\n",
+        "alien_0['x_position'] = alien_0['x_position'] + x_increment\n",
+        "print(\"New position X position: \" + str(alien_0['x_position']))"
+      ],
+      "metadata": {
+        "id": "6_cJqB5liJNO",
+        "outputId": "ac54cc1e-d3c1-4888-ebff-0e7cbf92a6df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original position: 0\n",
+            "New position X position: 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -538,7 +573,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +600,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +625,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +650,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +675,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,7 +704,7 @@
       "metadata": {
         "id": "169QsOxuvAbe"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -808,10 +843,24 @@
         "\n"
       ],
       "metadata": {
-        "id": "FZytH_LBvZrP"
+        "id": "FZytH_LBvZrP",
+        "outputId": "f78ebcca-076a-4a37-bd00-d262f3dcc26e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 8 9]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -833,10 +882,205 @@
         "print(matriz_np * 2)"
       ],
       "metadata": {
-        "id": "RS-Cqk3rvb7k"
+        "id": "RS-Cqk3rvb7k",
+        "outputId": "f5ee5cf7-0999-4f25-ae6c-f725f18c4a82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 2  4  6]\n",
+            " [ 8 10 12]\n",
+            " [14 16 18]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz_1 = np.array([[1,2,3],\n",
+        "                     [4,5,6],\n",
+        "                     [7,8,9]])\n",
+        "\n",
+        "matriz_2 = np.array([[10],\n",
+        "                     [20],\n",
+        "                     [30]])\n"
+      ],
+      "metadata": {
+        "id": "o0eLhNRXjSJn"
+      },
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz_1.shape # da el orden de m x n"
+      ],
+      "metadata": {
+        "id": "fHv2xNFsjttt",
+        "outputId": "cedbb3cc-b668-4652-99de-1ce98cb0ba09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz_1 + matriz_2"
+      ],
+      "metadata": {
+        "id": "5nKn7Xg5jzIr",
+        "outputId": "d2fa5a35-10d5-4174-9bd7-6908f4e36960",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[11, 12, 13],\n",
+              "       [24, 25, 26],\n",
+              "       [37, 38, 39]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz_1 * matriz_2"
+      ],
+      "metadata": {
+        "id": "Rr3s-jMrkA_j",
+        "outputId": "8437fead-5fec-4cda-a234-eefa5ad00a59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 10,  20,  30],\n",
+              "       [ 80, 100, 120],\n",
+              "       [210, 240, 270]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz_1.T #transpuesta"
+      ],
+      "metadata": {
+        "id": "xnVCRR3wkIfV",
+        "outputId": "bd13a6c6-cec9-4e66-f7d5-7cfbec56be81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 4, 7],\n",
+              "       [2, 5, 8],\n",
+              "       [3, 6, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.trace(matriz_1) #la suma de la diagonal"
+      ],
+      "metadata": {
+        "id": "5pG7mTd0kPgx",
+        "outputId": "5da3cb9f-1d71-43e6-e686-ff6dcdf8e010",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.randint(1,10,(3,3)) #primero es el rango, el otro es la orden m x n #esto es un tupla"
+      ],
+      "metadata": {
+        "id": "HwoV79VRk6Nt",
+        "outputId": "b7817f0b-22ff-495d-afc5-e5f32602df2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6, 3, 1],\n",
+              "       [1, 5, 8],\n",
+              "       [5, 3, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -882,6 +1126,71 @@
       "metadata": {
         "id": "ROqSXb4Avk_T"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ventas = {'Pantalones':[2,5,10,8,10,5,5] , 'Camisetas':[8,8,8,4,5,4,5] , 'Zapatos':[5,2,3,8,6,3,4]}\n",
+        "Ult_3_P = ventas['Pantalones'][-3:]\n",
+        "Ult_3_C = ventas['Camisetas'][-3:]\n",
+        "Ult_3_Z = ventas['Zapatos'][-3:]\n",
+        "\n",
+        "print(f'Venta de los ultimos 3 dias de pantalones: {Ult_3_P} unidades')\n",
+        "print(f'Venta de los ultimos 3 dias de camisetas: {Ult_3_C} unidades')\n",
+        "print(f'Venta de los ultimos 3 dias de zapatos: {Ult_3_Z} unidades')\n",
+        "\n",
+        "\n",
+        "Total_Ventas_P = sum(ventas['Pantalones'])\n",
+        "Total_Ventas_C = sum(ventas['Camisetas'])\n",
+        "Total_Ventas_Z = sum(ventas['Zapatos'])\n",
+        "print(f'Total de ventas de pantalones = {Total_Ventas_P}')\n",
+        "print(f'Total de ventas de camisetas = {Total_Ventas_C}')\n",
+        "print(f'Total de ventas de zapatos = {Total_Ventas_Z}')\n",
+        "\n",
+        "Promedio_P = round(Total_Ventas_P/len(ventas['Pantalones']),2)\n",
+        "Promedio_C = round(Total_Ventas_C/len(ventas['Camisetas']),2)\n",
+        "Promedio_Z = round(Total_Ventas_Z/len(ventas['Zapatos']),2)\n",
+        "\n",
+        "print(f'Promedio de ventas diarias de pantalones = {Promedio_P}')\n",
+        "print(f'Promedio de ventas diarias de camisetas = {Promedio_C}')\n",
+        "print(f'Promedio de ventas diarias de zapatos = {Promedio_Z}')\n",
+        "\n",
+        "clasif_pantalones = 'Buenas ventas' if Promedio_P > 5 else 'Malas Ventas'\n",
+        "clasif_camisetas = 'Buenas ventas' if Promedio_C > 5 else 'Malas Ventas'\n",
+        "clasif_zapatos = 'Buenas ventas' if Promedio_Z > 5 else 'Malas Ventas'\n",
+        "\n",
+        "print(f'La clasificiacion de pantalones es {clasif_pantalones}')\n",
+        "print(f'La clasificiacion de camisetas es {clasif_camisetas}')\n",
+        "print(f'La clasificiacion de zapatos es {clasif_zapatos}')"
+      ],
+      "metadata": {
+        "id": "VsZsFIqGnH0q",
+        "outputId": "ce4f9a00-2e18-4911-87f7-5c01e3f06cf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Venta de los ultimos 3 dias de pantalones: [10, 5, 5] unidades\n",
+            "Venta de los ultimos 3 dias de camisetas: [5, 4, 5] unidades\n",
+            "Venta de los ultimos 3 dias de zapatos: [6, 3, 4] unidades\n",
+            "Total de ventas de pantalones = 45\n",
+            "Total de ventas de camisetas = 42\n",
+            "Total de ventas de zapatos = 31\n",
+            "Promedio de ventas diarias de pantalones = 6.43\n",
+            "Promedio de ventas diarias de camisetas = 6.0\n",
+            "Promedio de ventas diarias de zapatos = 4.43\n",
+            "La clasificiacion de pantalones es Buenas ventas\n",
+            "La clasificiacion de camisetas es Buenas ventas\n",
+            "La clasificiacion de zapatos es Malas Ventas\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
